--- a/PGM.vcxproj.filters
+++ b/PGM.vcxproj.filters
@@ -70,4 +70,15 @@
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\PGM.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\PGMDoc.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Toolbar.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
